修改git仓库地址

--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,9 @@ theme: landscape
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: git@github.com:Wecash-FE/wecashGroupBlog.git
+  branch: master
 
 # admin
 admin:
